--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   </head>
   <body>
     <!-- nav-bar -->
-    <nav id="blur" class="navbar navbar-expand-md navbar-dark fixed-top">
+    <nav class="navbar navbar-expand-md navbar-dark fixed-top">
       <div class="container">
         <img
           class="favicon"
@@ -69,32 +69,31 @@
       </div>
     </nav>
     <!-- Carousel  -->
-    <header id="inicio-top">
+    <header class="container" id="inicio-top">
       <div
         id="carouselExampleFade"
         class="carousel slide carousel-fade mb-5"
         data-bs-ride="carousel"
-        style="height: 70vh"
       >
-        <div class="carousel-inner h-100">
-          <div class="carousel-item active h-100" data-bs-interval="10000">
+        <div class="carousel-inner">
+          <div class="carousel-item active" data-bs-interval="10000">
             <img
               src="./assets/img/carousel1.jpg"
-              class="d-block w-100 h-100 object-fit-cover"
+              class="d-block w-100 object-fit-cover"
               alt="Fotografía de unas Alpacas"
             />
           </div>
-          <div class="carousel-item h-100" data-bs-interval="2000">
+          <div class="carousel-item" data-bs-interval="2000">
             <img
               src="./assets/img/carousel2.jpg"
-              class="d-block w-100 h-100 object-fit-cover"
+              class="d-block w-100 object-fit-cover"
               alt="Fotografía de unos Moai"
             />
           </div>
-          <div class="carousel-item h-100">
+          <div class="carousel-item">
             <img
               src="./assets/img/carousel3.jpg"
-              class="d-block w-100 h-100 object-fit-cover"
+              class="d-block w-100 object-fit-cover"
               alt="Fotografía de un pinguino"
             />
           </div>
@@ -294,87 +293,6 @@
             </div>
           </div>
 
-          <!-- <div class="col-lg-6 col-sm-12 card mb-3" style="max-width: 540px">
-            <div class="row g-0">
-              <div class="col-md-4">
-                <img
-                  src="./assets/img/card1.jpg"
-                  class="img-fluid rounded-start"
-                  alt="..."
-                />
-              </div>
-              <div class="col-md-8">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">
-                    This is a wider card with supporting text below as a natural
-                    lead-in to additional content. This content is a little bit
-                    longer.
-                  </p>
-                  <hr />
-                  <div class="bg-body-secondary">
-                    <i class="fa-solid fa-plane-up"></i>
-                    <p>Vuelos desde:</p>
-                    <p>$159.990</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-6 col-sm-12 card mb-3" style="max-width: 540px">
-            <div class="row g-0">
-              <div class="col-md-4">
-                <img
-                  src="./assets/img/card1.jpg"
-                  class="img-fluid rounded-start"
-                  alt="..."
-                />
-              </div>
-              <div class="col-md-8">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">
-                    This is a wider card with supporting text below as a natural
-                    lead-in to additional content. This content is a little bit
-                    longer.
-                  </p>
-                  <hr />
-                  <div class="bg-body-secondary">
-                    <i class="fa-solid fa-plane-up"></i>
-                    <p>Vuelos desde:</p>
-                    <p>$159.990</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-6 col-sm-12 card mb-3" style="max-width: 540px">
-            <div class="row g-0">
-              <div class="col-md-4">
-                <img
-                  src="./assets/img/card1.jpg"
-                  class="img-fluid rounded-start"
-                  alt="..."
-                />
-              </div>
-              <div class="col-md-8">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">
-                    This is a wider card with supporting text below as a natural
-                    lead-in to additional content. This content is a little bit
-                    longer.
-                  </p>
-                  <hr />
-                  <div class="bg-body-secondary">
-                    <i class="fa-solid fa-plane-up"></i>
-                    <p>Vuelos desde:</p>
-                    <p>$159.990</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div> -->
         </div>
       </section>
       <!-- section - testimonios -->
@@ -422,7 +340,7 @@
         <hr />
       </h2>
       <div class="row">
-        <article class="col-12 col-lg-6">
+        <form class="col-12 col-lg-6">
           <div class="container">
             <div class="row">
               <div class="col-6">
@@ -474,12 +392,12 @@
                   type="checkbox"
                   value=""
                   id="flexCheckDefault"
-                  data-bs-toggle="modal"
-                  data-bs-target="#staticBackdrop"
-                />
+                                  />
                 <label
                   class="form-check-label text-decoration-underline mb-2"
                   for="flexCheckDefault"
+                  data-bs-toggle="modal"
+                  data-bs-target="#staticBackdrop"
                 >
                   Acepto los términos y condiciones
                 </label>
@@ -550,7 +468,7 @@
               </button>
             </div>
           </div>
-        </article>
+        </form>
         <aside class="col-12 col-lg-6 mt-5">
           <div class="row d-flex align-items-center">
             <i class="fa-solid fa-phone col-1"></i>
