commit final revisión con prettier y realización de la documentación en el README.md

--- a/index.html
+++ b/index.html
@@ -292,7 +292,6 @@
               </div>
             </div>
           </div>
-
         </div>
       </section>
       <!-- section - testimonios -->
@@ -307,7 +306,11 @@
               ipsam porro dicta doloremque reprehenderit a blanditiis eius.
               Quisquam cumque totam exercitationem voluptatum.
             </p>
-            <img class="testimony__statements--thumbnail-img" src="./assets/img/testimonio1.jpg" alt="" />
+            <img
+              class="testimony__statements--thumbnail-img"
+              src="./assets/img/testimonio1.jpg"
+              alt=""
+            />
             <h5 class="testimony__statements-sub-title">Mariela</h5>
           </div>
           <div class="testimony__statements-main">
@@ -317,7 +320,11 @@
               ipsam porro dicta doloremque reprehenderit a blanditiis eius.
               Quisquam cumque totam exercitationem voluptatum.
             </p>
-            <img class="testimony__statements--thumbnail-img" src="./assets/img/testimonio2.jpg" alt="" />
+            <img
+              class="testimony__statements--thumbnail-img"
+              src="./assets/img/testimonio2.jpg"
+              alt=""
+            />
             <h5 class="testimony__statements-sub-title">Christian</h5>
           </div>
           <div class="testimony__statements-main">
@@ -327,7 +334,11 @@
               ipsam porro dicta doloremque reprehenderit a blanditiis eius.
               Quisquam cumque totam exercitationem voluptatum.
             </p>
-            <img class="testimony__statements--thumbnail-img" src="./assets/img/testimonio3.jpg" alt="" />
+            <img
+              class="testimony__statements--thumbnail-img"
+              src="./assets/img/testimonio3.jpg"
+              alt=""
+            />
             <h5 class="testimony__statements-sub-title">Fernanda</h5>
           </div>
         </div>
@@ -392,7 +403,7 @@
                   type="checkbox"
                   value=""
                   id="flexCheckDefault"
-                                  />
+                />
                 <label
                   class="form-check-label text-decoration-underline mb-2"
                   for="flexCheckDefault"
