--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       crossorigin="anonymous"
     ></script>
     <script defer src="./assets/js/index.js"></script>
-    <title>Document</title>
+    <title>Prueba interfaz de usuario web - Nicolás Valderrama</title>
   </head>
   <body>
     <!-- nav-bar -->
